<resources>
    <string name="app_name">Events App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="events">events</string>
    <string name="myEvents">My Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noUpcomingEvents">No upcoming events</string>
    <string name="interestedEvents">Interested Events</string>
    <string name="attendingEvents">Attending Events</string>
    <string name="myProfile">My profile</string>
    <string name="email">email</string>
    <string name="endSession">end session</string>
    <string name="changePassword">Change password</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="save">save</string>
    <string name="friends">friends</string>
    <string name="featured">FEATURED</string>
    <string name="marathon">MARATHON</string>
    <string name="football">FOOTBALL</string>
    <string name="concert">CONCERT</string>
    <string name="party">PARTY</string>
    <string name="standUpTheater"><![CDATA[STAND UP & THEATER]]></string>
    <string name="festival">FESTIVAL</string>
    <string name="exhibition">EXHIBITION</string>
    <string name="all">all</string>
    <string name="addEvent">add event</string>
    <string name="NazivDogadjaja">Event name</string>
    <string name="Description">Description</string>
    <string name="Location">Location</string>
    <string name="DateTime">dd.MM.yyyy HH:mm</string>
    <string name="promotedEvent">Promoted event</string>
    <string name="capacity">Capacity</string>
    <string name="createEvent">create event</string>
    <string name="eventName">eventName</string>
    <string name="noInterestedEvents">You have zero interested events.</string>
    <string name="noAttendingEv">You don\'t have any registered events.</string>
    <string name="UpcomingEvents">Upcoming Events</string>
    <string name="PastEvents">Passed events</string>
    <string name="interested">interested</string>
    <string name="attending">attending</string>
    <string name="rate">rate</string>
    <string name="rateEvent">Rate event</string>
    <string name="confirmRt">Confirm rating</string>
    <string name="Admin">Admin</string>
    <string name="friendsAct">Friends Activity</string>
</resources>