<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnInterestedEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interestedEvents"
            android:backgroundTint="@color/purple">
        </Button>

        <Button
            android:id="@+id/btnAttendingEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attendingEvents"
            android:backgroundTint="@color/purple">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myProfile"
        android:backgroundTint="@color/purple">
    </Button>
</LinearLayout>