<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".EventsActivity"
    android:orientation="vertical"
    android:padding="3dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="24sp">
    </TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/username">
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/fragmentContanier"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        >

        <Button
            android:id="@+id/events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/salmon"
            >
        </Button>

        <Button
            android:id="@+id/myEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/myEvents"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/salmon"
            >
        </Button>

        <Button
            android:id="@+id/friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:layout_weight="1"
            android:enabled="false"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/salmon"
            >
        </Button>

    </LinearLayout>

</LinearLayout>
