<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/firstLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_marginEnd="2dp">

        </Button>

        <Button
            android:id="@+id/firstRegister"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:text="@string/register" >

        </Button>

    </LinearLayout>


<!--    prikaz nakon pritiska login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:inputType="text"
            android:layout_gravity="center"
            android:visibility="gone"
            >
        </EditText>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone">
        </EditText>

        <Button
            android:id="@+id/secondLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:visibility="gone"
            >
        </Button>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:useDefaultMargins="true"

        >

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:text="@string/Username"
            android:visibility="gone"
            >
        </TextView>

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:hint="@string/Username"
            android:inputType="text"
            android:visibility="gone"
           >
        </EditText>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:text="@string/Email"
            android:visibility="gone"
            >
        </TextView>

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:hint="@string/Email"
            android:inputType="text"
            android:visibility="gone"
            >
        </EditText>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:text="@string/Password"
            android:visibility="gone"
            >
        </TextView>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:visibility="gone"
            >
        </EditText>

    </GridLayout>

    <Button
        android:id="@+id/secondRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        >
    </Button>



</LinearLayout>
